--- a/public/index.html
+++ b/public/index.html
@@ -107,9 +107,9 @@
         <section id="contact">
             <h2>Contact Me</h2>
             <form id="contactForm" class="contact-form">
-               <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" required></textarea>
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                 <button type="submit">Send</button>
             </form>
            
