--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
         <div class="projects-container">
             <!-- Project 1 -->
             <div class="project-card">
-                <img src="img/10559212_4502401.jpg" alt="Project 1">
+                <img src="img/vickeyweather.jpg" alt="Project 1">
                 <h3>Dance website</h3>
                 <p>A brief description of Dance app.</p>
                 <button class="btn" onclick="showPopup('project1')">View Details</button>
