--- a/public/index.html
+++ b/public/index.html
@@ -284,6 +284,7 @@
                 <h3>Ecommerce Website</h3>
                 <span class="close-btn" onclick="closePopup('project4')">&times;</span>
             </div>
+             <div class="popup-body">
           <p>
   # Fulljhakaas E-commerce Website  
   Designed a responsive frontend for an e-commerce platform featuring product listings, a navbar, and a shopping cart UI using HTML, CSS, and JavaScript.  
@@ -309,9 +310,10 @@
 <p>## Live Website  
 You can view the live project here:  
 <a href="https://fulljhakaas.vercel.app/">Fulljhakaas E-commerce Live</a></p>
+</div>
 
 
-        </div>
+    </div>
     </div>
 
 
