--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <div class="buttons">
                 <a href="#hire" class="btn hire"  onclick="window.location.href='mailto:amritanshuy56@gmail.com?subject=Hiring Inquiry&body=Hello, I am interested in hiring you.'">Hire</a>
                 <a href="#contact" class="btn contact">Contact</a>
-                <a href="AmritanshuYadavResume.pdf" class="btn" download>Download Resume</a>
+                <a href="AmritanshuYadavResume (3).pdf" class="btn" download>Download Resume</a>
             </div>
         </div>
     </div>
