--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
             <div class="timeline-item">
                 <span class="timeline-icon"><i class="fas fa-university"></i></span>
                 <div class="timeline-content">
-                    <h3>Bachelor's in computer applictaion <span>(Expected 2025)</span></h3>
+                    <h3>Bachelor's in Computer Application <span>(Expected 2025)</span></h3>
                     <p><em>University:</em>YCMOU</p>
                     <p><strong>Relevant Courses:</strong> Data Structures, Algorithms, Java Programming, Software Engineering</p>
                     <p><strong>Projects:</strong> Developed a library management system, RESTful API for an e-commerce platform</p>
